<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">掌上行情</string>
    <string name="range">排名</string>
    <string name="self">自选</string>
    <string name="mintime">分时</string>
    <string name="commentdetail">评论详情</string>
    <string name="min_graph">分时图</string>
    <string name="stock_remind">股票价格提醒</string>
    <string name="updatetime">更新时间</string>
    <string name="min_volume">成交量</string>
    <string name="min_amount">成交额</string>
    <string name="kline_graph">K线图</string>
    <string name="open">开</string>
    <string name="high">高</string>
    <string name="low">低</string>
    <string name="close">收</string>
    <string name="kline">K线</string>
    <string name="market">市场</string>
    <string name="community">社区</string>
    <string name="comment">评论</string>
    <string name="five">五档</string>
    <string name="deteal">明细</string>
    <string name="finance">财务数据</string>
    <string name="dash">- -</string>
    <string name="sale1">卖一</string>
    <string name="sale2">卖二</string>
    <string name="sale3">卖三</string>
    <string name="sale4">卖四</string>
    <string name="sale5">卖五</string>
    <string name="buy1">买一</string>
    <string name="buy2">买二</string>
    <string name="buy3">买三</string>
    <string name="buy4">买四</string>
    <string name="buy5">买五</string>
    <string name="index">指标▼</string>
    <string name="cycle">周期▼</string>
    <string name="type">类型▼</string>
    <string name="stocksearch">股票查询</string>
    <string name="input">名称、代码、首字母等</string>
    <string name="searchresults">查询结果</string>
    <string name="nologin">未登录</string>
    <string name="personal_center">个人中心</string>
    <string name="relate_me">与我相关</string>
    <string name="userlogin">用户登录</string>
    <string name="login">登录</string>
    <string name="personal">个人中心</string>
    <string name="personinfo">我的资料</string>
    <string name="regist">用户注册</string>
    <string name="wstocklogin">用户登录</string>
    <string name="username">邮箱/手机号</string>
    <string name="password">密码</string>
    <string name="qq">QQ</string>
    <string name="wb">微博</string>
    <string name="wregist">注册</string>
    <string name="otherloginway">其他登录方式</string>
    <string name="links">我已阅读并接受：《掌上行情用户协议》</string>
    <string name="modify_pass">密码修改</string>
    <string name="bind">绑定信息</string>
    <string name="newer_class">新手课堂</string>
    <string name="sysset">系统设置</string>
    <string name="selfsync">自选股云同步</string>
    <string name="nightmode">夜间模式</string>
    <string name="refreshf">刷新频率</string>
    <string name="refresh_set">刷新设置</string>
    <string name="self_refresh">自选刷新</string>
    <string name="list_refresh">列表刷新</string>
    <string name="min_refresh">分时刷新</string>
    <string name="kline_refresh">K线刷新</string>
    <string name="showset">显示设置</string>
    <string name="clearcache">清除缓存</string>
    <string name="suggest">意见反馈</string>
    <string name="about">关于</string>
    <string name="guide">引导页</string>
    <string name="risktips">风险提示</string>
    <string name="contact_us">联系我们</string>
    <string name="api_app">股票数据API以及定制开发APP等服务</string>
    <string name="check_version">检查新版本</string>
    <string name="cooperation">业务合作Email</string>
    <string name="email">联系邮箱(必填)</string>
    <string name="boss_email">wstocknet@163.com</string>
    <string name="developer">技术支持QQ</string>
    <string name="developer_value">515320693</string>
    <string name="app_develop">承接金融APP开发</string>
    <string name="simple_need_hint">请简要叙述您的需求！(必填)</string>
    <string name="name">姓名(必填)</string>
    <string name="contact_phone">联系电话(必填)</string>
    <string name="cd_web">www.wsbigdata.com</string>
    <string name="www_web">www.wstock.net</string>
    <string name="company">成都微盛数海科技有限公司版权所有</string>
    <string name="copy">©2015–2016</string>
    <string name="version_url">http://db2015.wstock.cn/wsDB_API/zgm/app/version.xml</string>
    <string name="textsize">字体大小</string>
    <string name="kstyle">K线样式</string>
    <string name="maparam">MA均线参数</string>
    <string name="maparamset">MA均线参数设置</string>
    <string name="defaultindex">默认指标</string>
    <string name="hsmarket">沪深市场</string>
    <string name="fund">基金</string>
    <string name="hkstock">港股</string>
    <string name="goods">商品期货</string>
    <string name="bond">债券</string>
    <string name="foreign">外汇</string>
    <string name="nameandsym">名称&amp;代码</string>
    <string name="newprice">最新价</string>
    <string name="uprange">涨跌幅%</string>
    <string name="updwon">涨跌</string>
    <string name="volume">成交量</string>
    <string name="amount">成交额</string>
    <string name="open_int">持仓</string>
    <string name="vol">现量</string>
    <string name="price2">结算价</string>
    <string name="price3">总笔或结算</string>
    <string name="lastclose">昨收</string>
    <string name="realtimedata">行情数据</string>
    <string name="now">当前时间：</string>
    <string name="topen">开盘</string>
    <string name="thigh">最高</string>
    <string name="tlow">最低</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="loading">正在加载...</string>
    <string name="refreshing">正在刷新...</string>
    <string name="release">发布</string>
    <string name="saywhat">想说点儿什么呢？</string>
    <string name="submit">提交</string>
    <string name="suggest_hint">您在使用过程中有哪些宝贵的意见或建议都尽管提出来吧，我们会第一时间予以答复！(限400字内)</string>
    <string name="contact_hint">联系方式</string>
    <string name="submit_suggest">提交反馈</string>
    <string name="pull_to_refresh_pull_down_label" />
    <string name="pull_to_refresh_pull_up_label">pull up to refresh…</string>
    <string name="pull_to_refresh_release_label" />
    <string name="pull_to_refresh_refreshing_label" />
    <string name="BGQ_02">报告期</string>
    <string name="SSRQ_03">上市日期</string>
    <string name="MGSY_04">每股收益</string>
    <string name="MGJZC_05">每股净资产</string>
    <string name="JZCSYL_06">净资产收益率%</string>
    <string name="MGJYXJ_07">每股经营现金</string>
    <string name="MGGJJ_08">每股公积金</string>
    <string name="MGWFP_09">每股未分配</string>
    <string name="GDQYB_10">股东权益比%</string>
    <string name="JLRTB_11">净利润同比%</string>
    <string name="ZYSRTB_12">主营收入同比%</string>
    <string name="XSMLL_13">销售毛利率%</string>
    <string name="TZMGJZC_14">调整每股净资产</string>
    <string name="ZZC_15">总资产（千元）</string>
    <string name="LDZC_16">流动资产（千元）</string>
    <string name="GDZC_17">固定资产（千元）</string>
    <string name="WXZC_18">无形资产（千元）</string>
    <string name="LDFZ_19">流动负债（千元）</string>
    <string name="CQFZ_20">长期负债（千元）</string>
    <string name="ZFZ_21">总负债（千元）</string>
    <string name="GDQY_22">股东权益（千元）</string>
    <string name="ZBGJJ_23">资本公积金（千元）</string>
    <string name="JYXJLL_24">经营现金流量（千元）</string>
    <string name="TZXJLL_25">投资现金流量（千元）</string>
    <string name="CZXJLL_26">筹资现金流量（千元）</string>
    <string name="XJZJE_27">现金增加额（千元）</string>
    <string name="ZYSR_28">主营收入（千元）</string>
    <string name="ZYLR_29">主营利润（千元）</string>
    <string name="YYLR_30">营业利润（千元）</string>
    <string name="TZSY_31">投资收益（千元）</string>
    <string name="YYWSZ_32">营业外收支（千元）</string>
    <string name="LRZE_33">利润总额（千元）</string>
    <string name="JLR_34">净利润（千元）</string>
    <string name="WFPLR_35">未分配利润（千元）</string>
    <string name="ZGB_36">总股本（万股）</string>
    <string name="WXSGHJ_37">无限售股合计（万股）</string>
    <string name="AG_38">A股（万股）</string>
    <string name="BG_39">B股（万股）</string>
    <string name="JWSSG_40">境外上市股（万股）</string>
    <string name="QTLTG_41">其它流通股（万股）</string>
    <string name="XSGHJ_42">销售股合计（万股）</string>
    <string name="GJCG_43">国家持股（万股）</string>
    <string name="GYFRG_44">国有法人股（万股）</string>
    <string name="JNFRG_45">境内法人股（万股）</string>
    <string name="JNZRRG_46">境内自然人股（万股）</string>
    <string name="QTFQRG_47">其他发起人股（万股）</string>
    <string name="MJFRG_48">募集法人股（万股）</string>
    <string name="JWFRG_49">境外法人股（万股）</string>
    <string name="JWZRRG_50">境外自然人股（万股）</string>
    <string name="YXGHQT_51">优先股或其它（万股）</string>
</resources>
