<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:layout_width="@dimen/hvlistview_width" android:layout_height="@dimen/listitem_height" android:baselineAligned="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/textsize" android:textColor="@color/bar_color" android:gravity="center" android:id="@id/item01" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="@dimen/item_width" android:layout_height="fill_parent" android:text="@string/nameandsym" android:singleLine="true" />
    <TextView android:layout_gravity="bottom" android:background="@color/transparent" android:layout_width="@dimen/divider" android:layout_height="fill_parent" />
    <LinearLayout android:orientation="horizontal" android:id="@id/head" android:layout_width="wrap_content" android:layout_height="fill_parent" android:baselineAligned="true">
        <TextView android:textSize="@dimen/textsize" android:textColor="@color/bar_color" android:gravity="center" android:id="@id/item2" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="@dimen/item_width" android:layout_height="fill_parent" android:text="@string/newprice" android:singleLine="true" />
        <TextView android:layout_gravity="bottom" android:background="@color/transparent" android:layout_width="@dimen/divider" android:layout_height="fill_parent" />
        <TextView android:textSize="@dimen/textsize" android:textColor="@color/bar_color" android:gravity="center" android:id="@id/item3" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="@dimen/item_width" android:layout_height="fill_parent" android:text="@string/uprange" android:singleLine="true" />
        <TextView android:layout_gravity="bottom" android:background="@color/transparent" android:layout_width="@dimen/divider" android:layout_height="fill_parent" />
        <TextView android:textSize="@dimen/textsize" android:textColor="@color/bar_color" android:gravity="center" android:id="@id/item4" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="@dimen/item_width" android:layout_height="fill_parent" android:text="@string/updwon" android:singleLine="true" />
        <TextView android:layout_gravity="bottom" android:background="@color/transparent" android:layout_width="@dimen/divider" android:layout_height="fill_parent" />
        <TextView android:textSize="@dimen/textsize" android:textColor="@color/bar_color" android:gravity="center" android:id="@id/item5" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="@dimen/item_width" android:layout_height="fill_parent" android:text="@string/volume" android:singleLine="true" />
        <TextView android:layout_gravity="bottom" android:background="@color/transparent" android:layout_width="@dimen/divider" android:layout_height="fill_parent" />
        <TextView android:textSize="@dimen/textsize" android:textColor="@color/bar_color" android:gravity="center" android:id="@id/item6" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="@dimen/item_width" android:layout_height="fill_parent" android:text="@string/amount" android:singleLine="true" />
        <TextView android:layout_gravity="bottom" android:background="@color/transparent" android:layout_width="@dimen/divider" android:layout_height="fill_parent" />
        <TextView android:textSize="@dimen/textsize" android:textColor="@color/bar_color" android:gravity="center" android:id="@id/item7" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="@dimen/item_width" android:layout_height="fill_parent" android:text="@string/open_int" android:singleLine="true" />
        <TextView android:layout_gravity="bottom" android:background="@color/transparent" android:layout_width="@dimen/divider" android:layout_height="fill_parent" />
        <TextView android:textSize="@dimen/textsize" android:textColor="@color/bar_color" android:gravity="center" android:id="@id/item8" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="@dimen/item_width" android:layout_height="fill_parent" android:text="@string/vol" android:singleLine="true" />
        <TextView android:layout_gravity="bottom" android:background="@color/transparent" android:layout_width="@dimen/divider" android:layout_height="fill_parent" />
        <TextView android:textSize="@dimen/textsize" android:textColor="@color/bar_color" android:gravity="center" android:id="@id/item9" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="@dimen/item_width" android:layout_height="fill_parent" android:text="@string/price2" android:singleLine="true" />
        <TextView android:layout_gravity="bottom" android:background="@color/transparent" android:layout_width="@dimen/divider" android:layout_height="fill_parent" />
        <TextView android:textSize="@dimen/textsize" android:textColor="@color/bar_color" android:gravity="center" android:id="@id/item10" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="@dimen/item_width" android:layout_height="fill_parent" android:text="@string/price3" android:singleLine="true" />
        <TextView android:layout_gravity="bottom" android:background="@color/transparent" android:layout_width="@dimen/divider" android:layout_height="fill_parent" />
        <TextView android:textSize="@dimen/textsize" android:textColor="@color/bar_color" android:gravity="center" android:id="@id/item11" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="@dimen/item_width" android:layout_height="fill_parent" android:text="@string/buy1" android:singleLine="true" />
        <TextView android:layout_gravity="bottom" android:background="@color/transparent" android:layout_width="@dimen/divider" android:layout_height="fill_parent" />
        <TextView android:textSize="@dimen/textsize" android:textColor="@color/bar_color" android:gravity="center" android:id="@id/item12" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="@dimen/item_width" android:layout_height="fill_parent" android:text="@string/sale1" android:singleLine="true" />
        <TextView android:layout_gravity="bottom" android:background="@color/transparent" android:layout_width="@dimen/divider" android:layout_height="fill_parent" />
        <TextView android:textSize="@dimen/textsize" android:textColor="@color/bar_color" android:gravity="center" android:id="@id/item13" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="@dimen/item_width" android:layout_height="fill_parent" android:text="@string/lastclose" android:singleLine="true" />
        <TextView android:layout_gravity="bottom" android:background="@color/transparent" android:layout_width="@dimen/divider" android:layout_height="fill_parent" />
        <TextView android:textSize="@dimen/textsize" android:textColor="@color/bar_color" android:gravity="center" android:id="@id/item14" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="@dimen/item_width" android:layout_height="fill_parent" android:text="@string/topen" android:singleLine="true" />
        <TextView android:layout_gravity="bottom" android:background="@color/transparent" android:layout_width="@dimen/divider" android:layout_height="fill_parent" />
        <TextView android:textSize="@dimen/textsize" android:textColor="@color/bar_color" android:gravity="center" android:id="@id/item15" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="@dimen/item_width" android:layout_height="fill_parent" android:text="@string/thigh" android:singleLine="true" />
        <TextView android:layout_gravity="bottom" android:background="@color/transparent" android:layout_width="@dimen/divider" android:layout_height="fill_parent" />
        <TextView android:textSize="@dimen/textsize" android:textColor="@color/bar_color" android:gravity="center" android:id="@id/item16" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="@dimen/item_width" android:layout_height="fill_parent" android:text="@string/tlow" android:singleLine="true" />
        <TextView android:layout_gravity="bottom" android:background="@color/transparent" android:layout_width="@dimen/divider" android:layout_height="fill_parent" />
    </LinearLayout>
</LinearLayout>