<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/root" android:background="@color/whites" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:id="@id/bar" android:background="@color/bar_color" android:layout_width="fill_parent" android:layout_height="@dimen/bar_height">
        <Button android:id="@id/back" android:background="@drawable/back_click" android:layout_width="@dimen/margin25" android:layout_height="@dimen/margin25" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textColor="@color/white" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contact_us" android:layout_centerInParent="true" />
    </RelativeLayout>
    <TextView android:textColor="@color/bar_color" android:gravity="center" android:id="@id/advertise" android:layout_width="fill_parent" android:layout_height="@dimen/margin40" android:layout_marginTop="@dimen/margin10" android:text="@string/api_app" />
    <com.demo.view.ClearEditText android:id="@id/name" android:background="@drawable/editshape" android:padding="@dimen/margin5" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="@dimen/margin40" android:layout_marginLeft="@dimen/margin10" android:layout_marginTop="@dimen/margin15" android:layout_marginRight="@dimen/margin10" android:hint="@string/name" android:singleLine="true" android:maxLength="30" />
    <com.demo.view.ClearEditText android:id="@id/contact_phone" android:background="@drawable/editshape" android:padding="@dimen/margin5" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="@dimen/margin40" android:layout_marginLeft="@dimen/margin10" android:layout_marginTop="@dimen/margin15" android:layout_marginRight="@dimen/margin10" android:hint="@string/contact_phone" android:singleLine="true" android:maxLength="20" />
    <com.demo.view.ClearEditText android:id="@id/contact_email" android:background="@drawable/editshape" android:padding="@dimen/margin5" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="@dimen/margin40" android:layout_marginLeft="@dimen/margin10" android:layout_marginTop="@dimen/margin15" android:layout_marginRight="@dimen/margin10" android:hint="@string/email" android:singleLine="true" android:maxLength="30" />
    <EditText android:gravity="top" android:id="@id/content" android:background="@drawable/editshape" android:padding="@dimen/margin5" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="@dimen/login_bt_width" android:layout_marginLeft="@dimen/margin10" android:layout_marginTop="@dimen/margin15" android:layout_marginRight="@dimen/margin10" android:hint="@string/simple_need_hint" android:maxLength="200" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <Button android:textColor="@color/white" android:id="@id/submit" android:background="@drawable/login_btn" android:layout_width="@dimen/login_bt_width" android:layout_height="@dimen/margin45" android:text="@string/submit" android:layout_centerInParent="true" />
    </RelativeLayout>
</LinearLayout>