<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/root" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:id="@id/bar" android:background="@color/bar_color" android:layout_width="fill_parent" android:layout_height="@dimen/bar_height">
        <Button android:id="@id/back" android:background="@drawable/back_click" android:layout_width="@dimen/margin25" android:layout_height="@dimen/margin25" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textColor="@color/white" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about" android:layout_centerInParent="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="@dimen/margin110">
        <ImageView android:id="@id/applogo" android:layout_width="@dimen/margin60" android:layout_height="@dimen/margin60" android:src="@drawable/applogo" android:layout_centerInParent="true" />
        <TextView android:textColor="@color/bar_color" android:id="@id/version_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin5" android:layout_below="@id/applogo" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin10">
        <RelativeLayout android:orientation="vertical" android:id="@id/guide" android:background="@drawable/itemclick3" android:layout_width="fill_parent" android:layout_height="@dimen/margin45">
            <TextView android:textColor="@color/bar_color" android:gravity="center_vertical" android:id="@id/guide_lable" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_margin="@dimen/margin10" android:text="@string/guide" />
        </RelativeLayout>
        <TextView android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="@dimen/divider" />
        <RelativeLayout android:id="@id/risk_tips" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/margin45">
            <TextView android:textColor="@color/bar_color" android:id="@id/risk_tips_lable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin10" android:text="@string/risktips" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="@dimen/divider" />
        <RelativeLayout android:id="@id/check_version" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/margin45">
            <TextView android:textColor="@color/bar_color" android:id="@id/check_version_lable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin10" android:text="@string/check_version" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <TextView android:textColor="@color/gray" android:id="@id/check_version_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/margin10" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="@dimen/divider" />
        <RelativeLayout android:id="@id/app_develop" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/margin45" android:baselineAligned="true">
            <TextView android:textColor="@color/bar_color" android:id="@id/app_develop_lable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin10" android:text="@string/app_develop" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="@dimen/divider" />
        <RelativeLayout android:id="@id/email" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/margin45" android:baselineAligned="true">
            <TextView android:textColor="@color/bar_color" android:id="@id/email_lable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin10" android:text="@string/cooperation" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <TextView android:textColor="@color/gray" android:id="@id/email_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/margin10" android:text="@string/boss_email" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <TextView android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="@dimen/divider" />
        <RelativeLayout android:id="@id/developer" android:background="@drawable/itemclick3" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/margin45" android:baselineAligned="true">
            <TextView android:textColor="@color/bar_color" android:id="@id/developer_lable" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin10" android:text="@string/developer" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <TextView android:textColor="@color/gray" android:id="@id/developer_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/margin10" android:text="@string/developer_value" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
                <TextView android:autoLink="web" android:id="@id/www_web" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/www_web" android:layout_centerHorizontal="true" />
                <TextView android:autoLink="web" android:id="@id/cd_web" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cd_web" android:layout_below="@id/www_web" android:layout_centerHorizontal="true" />
                <TextView android:textColor="@color/gray" android:autoLink="map" android:id="@id/company" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/company" android:layout_below="@id/cd_web" android:layout_centerHorizontal="true" />
                <TextView android:textColor="@color/gray" android:id="@id/copy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/copy" android:layout_below="@id/company" android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>