<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/root" android:background="@color/whites" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/bar" android:background="@color/bar_color" android:layout_width="fill_parent" android:layout_height="@dimen/bar_height">
        <Button android:id="@id/back" android:background="@drawable/back_click" android:layout_width="@dimen/margin25" android:layout_height="@dimen/margin25" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:textColor="@color/white" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stocksearch" android:layout_centerInParent="true" />
    </RelativeLayout>
    <RelativeLayout android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="@dimen/group_item_height">
        <com.demo.view.ClearEditText android:textSize="@dimen/textsize" android:gravity="center_vertical" android:id="@id/edit_text" android:background="@drawable/editshape" android:paddingLeft="@dimen/margin10" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="@dimen/margin5" android:hint="@string/input" android:singleLine="true" />
    </RelativeLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/search_results" android:background="@color/whitesmoke" android:layout_width="fill_parent" android:layout_height="@dimen/margin25" android:layout_marginTop="@dimen/divider">
        <TextView android:textSize="@dimen/textsize" android:textColor="@color/ptr" android:gravity="center_vertical" android:id="@id/search_results_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin5" android:text="@string/searchresults" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ListView android:id="@id/listview" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:cacheColorHint="@color/transparent" android:divider="@color/transparent" android:dividerHeight="@dimen/divider" android:fastScrollEnabled="false" android:headerDividersEnabled="false" android:footerDividersEnabled="false" android:smoothScrollbar="true" />
    </LinearLayout>
</LinearLayout>